development price input

--- a/src/single.html
+++ b/src/single.html
@@ -78,6 +78,29 @@
                   </ul>
                 </div>
               </div>
+              <div class="aside__options" id="option-part">
+                <h5 class="aside__title">Цена</h5>
+                <div class="price-input">
+                  <div class="price-input__fields">
+                    <div class="price-input__field">
+                      <input type="number" class="price-input__min" value="25">
+                    </div>
+                    <div class="separator"></div>
+                    <div class="price-input__field">
+                      <input type="number" class="price-input__max" value="75">
+                    </div>
+                  </div>
+                  <div class="price-input__slider">
+                    <div class="price-input__progress" id="prodgress"></div>
+                  </div>
+                  <div class="price-input__range">
+                    <input type="range" name="range-min" id="range-min" min="0" max="10000"
+                      class="price-input__range-min" value="2500">
+                    <input type="range" name="range-max" id="range-max" min="0" max="10000"
+                      class="price-input__range-max" value="7500">
+                  </div>
+                </div>
+              </div>
             </aside>
             <div class="single-content__products products-single">
               <div class="products-single__grid">
