added: page stock

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -37,7 +37,7 @@
         </nav>
       </div>
       <div class="footer__col">
-        <div class="footer__logo"><img src="@img/logo-2-white.svg" alt=""></div>
+        <div class="footer__logo"><img src="@img/logo-2-white.svg" alt="" /></div>
         <nav class="footer__nav">
           <a href="#">Политика конфиденциальности</a>
           <a href="#">Статьи</a>
@@ -50,33 +50,6 @@
 </footer>
 <div class="author">
   <div class="author__container">
-    <div class="author__inner">
-      Разработка сайта | <a href="#">РА Аврора</a>
-    </div>
+    <div class="author__inner">Разработка сайта | <a href="#">РА Аврора</a></div>
   </div>
-</div>
-
-<div class="popup-menu">
-  <button type="button" class="popup-menu__close"></button>
-  <nav class="popup-menu__nav">
-    <a href="#" class="popup-menu__link">О нас</a>
-    <a href="#" class="popup-menu__link">Банкетный зал</a>
-    <a href="#" class="popup-menu__link">Акции</a>
-    <a href="#" class="popup-menu__link">Фотогаллерея</a>
-    <a href="#" class="popup-menu__link">Новости</a>
-    <a href="#" class="popup-menu__link">Вакансии</a>
-    <a href="#" class="popup-menu__link">Контакты</a>
-  </nav>
-  <div class="popup-menu__socials">
-    <a href="" class="popup-menu__socials-link">
-      <i class="fa-brands fa-vk"></i>
-    </a>
-    <a href="" class="popup-menu__socials-link">
-      <i class="fa-brands fa-square-whatsapp"></i>
-    </a>
-    <a href="" class="popup-menu__socials-link">
-      <i class="fa-brands fa-telegram"></i>
-    </a>
-  </div>
-  <button type="button" class="popup-menu__btn">Позвонить</button>
 </div>
