--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -1,4 +1,4 @@
-<div id="popup" aria-hidden="true" class="popup popup-fulldescr">
+<div id="popup" aria-hidden="true" class="popup popup-view">
   <div class="popup__wrapper">
     <div class="popup__content">
       <button data-close type="button" class="popup__close">X</button>
